--- a/apps/worker/pyproject.toml
+++ b/apps/worker/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "browser-use>=0.7.7",
     "httpx>=0.28.1",
     "python-multipart>=0.0.20",
+    "python-dotenv>=1.1.1",
 ]
 
 [tool.uv]
