--- a/apps/worker/pyproject.toml
+++ b/apps/worker/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
 dev-dependencies = [
     "pytest>=8.4.2",
     "httpx>=0.28.1",
+    "pytest-asyncio>=1.2.0",
 ]
 
 [tool.hatch.build.targets.wheel]
