docs: clarify ARTIFACTS_DIR path

--- a/apps/worker/.env.example
+++ b/apps/worker/.env.example
@@ -7,5 +7,5 @@ STEEL_API_KEY=your_steel_api_key_here
 # API token for authentication
 API_TOKEN=your_api_token_here
 
-# Directory for storing artifacts
+# Directory for storing artifacts (relative to the project/worker root)
 ARTIFACTS_DIR=./artifacts
