--- a/apps/worker/pyproject.toml
+++ b/apps/worker/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
 ]
 
 [tool.uv]
-dev-dependencies = ["pytest>=8.4.2", "httpx>=0.28.1"]
+dev-dependencies = ["pytest>=8.4.2"]
 
 [tool.hatch.build.targets.wheel]
 packages = ["app"]
