--- a/apps/worker/pyproject.toml
+++ b/apps/worker/pyproject.toml
@@ -11,13 +11,11 @@ dependencies = [
     "browser-use>=0.7.7",
     "httpx>=0.28.1",
     "python-multipart>=0.0.20",
+    "python-dotenv>=1.1.1",
 ]
 
 [tool.uv]
-dev-dependencies = [
-    "pytest>=8.4.2",
-    "httpx>=0.28.1",
-]
+dev-dependencies = ["pytest>=8.4.2"]
 
 [tool.hatch.build.targets.wheel]
 packages = ["app"]
