--- a/apps/worker/pyproject.toml
+++ b/apps/worker/pyproject.toml
@@ -19,7 +19,8 @@ dev-dependencies = ["pytest>=8.4.2", "ruff>=0.8.0"]
 
 [tool.ruff]
 line-length = 88
-exclude = ["__pycache__/", ".venv/", "migrations/"]
+exclude = ["__pycache__/", ".venv/", "**/migrations/**"]
+target-version = "py311"
 
 [tool.ruff.lint]
 select = [
@@ -75,6 +76,7 @@ select = [
     "LOG",
     "RUF",
 ]
+ignore = ["COM812"]
 
 [tool.ruff.lint.per-file-ignores]
 # Allow assert statements in test files
@@ -86,5 +88,7 @@ select = [
 
 [tool.hatch.build.targets.wheel]
 packages = ["app"]
+
+[build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
