--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,7 +6,12 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint .",
+    "lint:ci": "eslint . --max-warnings=0",
+    "lint:staged": "eslint --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "format:staged": "prettier --write"
   },
   "dependencies": {
     "better-auth": "^1.3.9",
@@ -25,6 +30,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
+    "prettier": "^3",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
