--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -8,6 +8,12 @@
     "test:integration": "uv run pytest tests/integration/ -v",
     "dev": "uv run uvicorn app.main:app --reload --host 0.0.0.0 --port 8000",
     "install-deps": "uv sync",
-    "lint": "echo 'Python linting not configured yet'"
+    "lint": "uv run ruff check .",
+    "lint:fix": "uv run ruff check --fix .",
+    "lint:staged": "uv run ruff check --fix",
+    "lint:statistics": "uv run ruff check . --statistics",
+    "format": "uv run ruff format .",
+    "format:staged": "uv run ruff format",
+    "format:check": "uv run ruff format --check ."
   }
 }
