--- a/apps/worker/pyproject.toml
+++ b/apps/worker/pyproject.toml
@@ -15,7 +15,76 @@ dependencies = [
 ]
 
 [tool.uv]
-dev-dependencies = ["pytest>=8.4.2"]
+dev-dependencies = ["pytest>=8.4.2", "ruff>=0.8.0"]
+
+[tool.ruff]
+line-length = 88
+exclude = ["__pycache__/", ".venv/", "**/migrations/**"]
+target-version = "py311"
+
+[tool.ruff.lint]
+select = [
+    "E",
+    "F",
+    "W",
+    "C90",
+    "I",
+    "N",
+    "UP",
+    "YTT",
+    "S",
+    "BLE",
+    "FBT",
+    "B",
+    "A",
+    "COM",
+    "C4",
+    "DTZ",
+    "T10",
+    "DJ",
+    "EM",
+    "EXE",
+    "FA",
+    "ISC",
+    "ICN",
+    "G",
+    "INP",
+    "PIE",
+    "T20",
+    "PYI",
+    "PT",
+    "Q",
+    "RSE",
+    "RET",
+    "SLF",
+    "SLOT",
+    "SIM",
+    "TID",
+    "INT",
+    "ARG",
+    "PTH",
+    "ERA",
+    "PD",
+    "PGH",
+    "PL",
+    "TRY",
+    "FLY",
+    "NPY",
+    "AIR",
+    "PERF",
+    "FURB",
+    "LOG",
+    "RUF",
+]
+ignore = ["COM812"]
+
+[tool.ruff.lint.per-file-ignores]
+# Allow assert statements in test files
+"tests/**/*.py" = ["S101"]
+# Allow HTTPException raises in try blocks for router error handling
+"app/routers/*.py" = ["TRY301"]
+# Allow random.random() for retry jitter
+"app/utils/retry.py" = ["S311"]
 
 [tool.hatch.build.targets.wheel]
 packages = ["app"]
