--- a/apps/worker/pyproject.toml
+++ b/apps/worker/pyproject.toml
@@ -12,6 +12,10 @@ dependencies = [
     "httpx>=0.28.1",
     "python-multipart>=0.0.20",
     "python-dotenv>=1.1.1",
+    "sqlmodel>=0.0.25",
+    "aiosqlite>=0.21.0",
+    "greenlet>=3.2.4",
+    "pydantic-settings>=2.10.1",
 ]
 
 [tool.uv]
