refactor(worker): improve db config and model relationships

--- a/apps/worker/.env.example
+++ b/apps/worker/.env.example
@@ -1,7 +1,7 @@
 # Environment variables for YeetFlow Worker
 # Copy this file to .env and configure the values
 
-# Database configuration
+# Database configuration (config builds async URL for SQLite)
 DATABASE_URL=sqlite:///yeetflow.db
 
 # Steel.dev API configuration (optional - enables mock mode if not provided)
@@ -12,6 +12,10 @@ DEBUG=true
 HOST=0.0.0.0
 PORT=8000
 
+# Socket.IO CORS configuration
+# Use '*' for all origins or comma-separated list of allowed origins
+SOCKETIO_CORS=*
+
 # Logging
 LOG_LEVEL=INFO
 
@@ -19,8 +23,8 @@ LOG_LEVEL=INFO
 SECRET_KEY=your-secret-key-change-in-production
 
 # Retry configuration
-RETRY_MAX_ATTEMPTS=3
 RETRY_BASE_DELAY=1.0
+RETRY_MAX_ATTEMPTS=3
 RETRY_MAX_DELAY=30.0
 
 # Directory for storing artifacts (relative to the project/worker root)
