feat(worker): add SQLModel ORM (#18)
* feat(worker): add SQLModel ORM

* refactor(worker): improve db config and model relationships

* fix(worker): no nulls for foreign keys and improve HTTP retry logic

* feat(worker): add index, non-null constraint, and simplify Run relationships

--- a/apps/worker/.env.example
+++ b/apps/worker/.env.example
@@ -1,11 +1,31 @@
 # Environment variables for YeetFlow Worker
-# Fill in the actual values
+# Copy this file to .env and configure the values
 
-# Steel API key for browser automation
+# Database configuration (config builds async URL for SQLite)
+DATABASE_URL=sqlite:///yeetflow.db
+
+# Steel.dev API configuration (optional - enables mock mode if not provided)
 STEEL_API_KEY=your_steel_api_key_here
 
-# API token for authentication
-API_TOKEN=your_api_token_here
+# Application settings
+DEBUG=true
+HOST=0.0.0.0
+PORT=8000
+
+# Socket.IO CORS configuration
+# Use '*' for all origins or comma-separated list of allowed origins
+SOCKETIO_CORS=*
+
+# Logging
+LOG_LEVEL=INFO
+
+# Security
+SECRET_KEY=your-secret-key-change-in-production
+
+# Retry configuration
+RETRY_BASE_DELAY=1.0
+RETRY_MAX_ATTEMPTS=3
+RETRY_MAX_DELAY=30.0
 
 # Directory for storing artifacts (relative to the project/worker root)
 ARTIFACTS_DIR=./artifacts
