--- a/apps/worker/alembic.ini
+++ b/apps/worker/alembic.ini
@@ -100,10 +100,10 @@ path_separator = os
 # black.options = -l 79 REVISION_SCRIPT_FILENAME
 
 # lint with attempts to fix using "ruff" - use the module runner, against the "ruff" module
-# hooks = ruff
-# ruff.type = module
-# ruff.module = ruff
-# ruff.options = check --fix REVISION_SCRIPT_FILENAME
+hooks = ruff
+ruff.type = module
+ruff.module = ruff
+ruff.options = check --fix REVISION_SCRIPT_FILENAME
 
 # Alternatively, use the exec runner to execute a binary found on your PATH
 # hooks = ruff
