--- a/apps/worker/pyproject.toml
+++ b/apps/worker/pyproject.toml
@@ -24,7 +24,7 @@ dev-dependencies = ["pytest>=8.4.2", "ruff>=0.8.0"]
 
 [tool.ruff]
 line-length = 88
-exclude = ["__pycache__/", ".venv/", "**/migrations/**"]
+exclude = ["__pycache__/", ".venv/", "**/alembic/versions/**"]
 target-version = "py311"
 
 [tool.ruff.lint]
@@ -99,8 +99,8 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project.scripts]
-db-upgrade = "alembic.config:main"
-db-downgrade = "alembic.config:main"
-db-current = "alembic.config:main"
-db-history = "alembic.config:main"
-db-revision = "alembic.config:main"
+db-upgrade = "app.migrations_cli:upgrade_main"
+db-downgrade = "app.migrations_cli:downgrade_main"
+db-current = "app.migrations_cli:current_main"
+db-history = "app.migrations_cli:history_main"
+db-revision = "app.migrations_cli:revision_main"
