feat(worker): artifact streaming endpoint

--- a/apps/worker/.env.example
+++ b/apps/worker/.env.example
@@ -27,5 +27,14 @@ RETRY_BASE_DELAY=1.0
 RETRY_MAX_ATTEMPTS=3
 RETRY_MAX_DELAY=30.0
 
-# Directory for storing artifacts (relative to the project/worker root)
+## Local Storage (Default)
+STORAGE_BACKEND=local
 ARTIFACTS_DIR=./artifacts
+
+## S3-Compatible Storage (Future)
+# STORAGE_BACKEND=s3
+# S3_ENDPOINT_URL=https://s3.amazonaws.com
+# S3_ACCESS_KEY=your-access-key
+# S3_SECRET_KEY=your-secret-key
+# S3_BUCKET=yeetflow-artifacts
+# S3_REGION=us-east-1
