feat(worker): add auth and user management

--- a/apps/worker/pyproject.toml
+++ b/apps/worker/pyproject.toml
@@ -17,6 +17,8 @@ dependencies = [
     "greenlet>=3.2.4",
     "pydantic-settings>=2.10.1",
     "alembic>=1.16.5",
+    "pyjwt>=2.10.1",
+    "passlib[bcrypt]>=1.7.4",
 ]
 
 [tool.uv]
@@ -90,7 +92,7 @@ ignore = ["COM812"]
 
 [tool.ruff.lint.per-file-ignores]
 # Allow assert statements, dummy passwords, and implicit namespace packages in test files
-"tests/**/*.py" = ["S101", "S105", "INP001"]
+"tests/**/*.py" = ["S101", "S105", "S106", "INP001"]
 # Allow HTTPException raises in try blocks for router error handling
 "app/routers/*.py" = ["TRY301"]
 # Allow random.random() for retry jitter
