--- a/apps/worker/pyproject.toml
+++ b/apps/worker/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
     "greenlet>=3.2.4",
     "pydantic-settings>=2.10.1",
     "alembic>=1.16.5",
-    "pyjwt>=2.10.1",
+    "PyJWT[crypto]>=2.10.1",
     "passlib[bcrypt]>=1.7.4",
 ]
 
