refactor(work): consolidate run access logic and improve CORS validation

--- a/apps/worker/.env.example
+++ b/apps/worker/.env.example
@@ -12,8 +12,8 @@ DEBUG=true
 HOST=0.0.0.0
 PORT=8000
 
-# Socket.IO CORS configuration
-# Use '*' for all origins or comma-separated list of allowed origins
+# CORS configuration
+CORS_ALLOW_ORIGINS=*
 SOCKETIO_CORS=*
 
 # Logging
