--- a/apps/worker/pyproject.toml
+++ b/apps/worker/pyproject.toml
@@ -19,6 +19,10 @@ dependencies = [
     "alembic>=1.16.5",
     "PyJWT[crypto]>=2.10.1",
     "passlib[bcrypt]>=1.7.4",
+    # Pin bcrypt to a version compatible with passlib to avoid
+    # AttributeError: module 'bcrypt' has no attribute '__about__'
+    # See: https://github.com/pyca/bcrypt/issues/684
+    "bcrypt==4.0.1",
 ]
 
 [tool.uv]
