feat(web): use cookie auth and refactor components

--- a/apps/web/.env.local.example
+++ b/apps/web/.env.local.example
@@ -9,3 +9,5 @@ WORKER_BASE_URL=http://localhost:8000
 
 # API token for worker authentication
 WORKER_API_TOKEN=your_worker_api_token_here
+
+NEXT_PUBLIC_TRUSTED_SESSION_ORIGIN=https://api.steel.dev
