--- a/apps/worker/alembic.ini
+++ b/apps/worker/alembic.ini
@@ -89,27 +89,15 @@ path_separator = os
 
 
 [post_write_hooks]
-# post_write_hooks defines scripts or Python functions that are run
-# on newly generated revision scripts.  See the documentation for further
-# detail and examples
+hooks = ruff_format,ruff_lint
 
-# format using "black" - use the console_scripts runner, against the "black" entrypoint
-# hooks = black
-# black.type = console_scripts
-# black.entrypoint = black
-# black.options = -l 79 REVISION_SCRIPT_FILENAME
+ruff_format.type = module
+ruff_format.module = ruff
+ruff_format.options = format REVISION_SCRIPT_FILENAME
 
-# lint with attempts to fix using "ruff" - use the module runner, against the "ruff" module
-hooks = ruff
-ruff.type = module
-ruff.module = ruff
-ruff.options = check --fix REVISION_SCRIPT_FILENAME
-
-# Alternatively, use the exec runner to execute a binary found on your PATH
-# hooks = ruff
-# ruff.type = exec
-# ruff.executable = ruff
-# ruff.options = check --fix REVISION_SCRIPT_FILENAME
+ruff_lint.type = module
+ruff_lint.module = ruff
+ruff_lint.options = check --fix REVISION_SCRIPT_FILENAME
 
 # Logging configuration.  This is also consumed by the user-maintained
 # env.py script only.
